--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -14,6 +14,7 @@
     </noscript>
     <div id="app"></div> 
     <!-- JS libraries delivered through CDN -->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script type="text/javascript" src="http://cdn.graphalchemist.com/alchemy.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
