--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -14,6 +14,7 @@
     <div id="app"></div> 
     <!-- JS libraries delivered through CDN -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-selection-multi.v1.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
