--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -15,6 +15,7 @@
     <!-- JS libraries delivered through CDN -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.18.1/cytoscape.min.js" integrity="sha512-MgZAJudXekIHKoFtEk1NUwpSSCDt6JlfkUdwgX/1ustAyJltGO82ayHPOyK31xy9q84nGecgtF+D9hdm2OZldg==" crossorigin="anonymous"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
